src/apps/auth/style/app.scss
@import "../../../css/partials/base";
@import "oauth/oauth.css";

#auth_app_container {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background-color: $primary-color;

	// for Edge
	overflow-y: hidden;
}

#auth_app_container .app-content {
	margin: 0 auto;
	position: relative;
}

#auth_app_container .error-message-wrapper {
	display: none;
}

#auth_app_container .error-message-wrapper .text {
	margin-left: 5px;
	display: inline-block;
	margin-bottom: 10px;
}

#auth_app_container ::selection {
	background: #00B8FF;
	color: #ffffff;
}
#auth_app_container ::-moz-selection {
	background: #00B8FF;
	color: #ffffff;
}
#auth_app_container a {
	text-decoration: none;
}
#auth_app_container a:focus {
	outline: none;
}
#auth_app_container .hidden {
	display: none;
}
/*
=====================================
	   LOGO AND INTRO TEXT
=====================================
*/
#auth_app_container .intro {
	width: 59%;
	float: left;
	height: 100vh;
	background-color: $font-primary-color;
	position: relative;
}
#auth_app_container .intro::after {
	display: block;
	content: '';
	background-color: #303039;
	position: absolute;
	right: -120px;
	height: 100%;
	width: 240px;
	transform: skew(-6deg);
	z-index: 0;
}
#auth_app_container .intro .content {
	position: absolute;
	top: 25%;
	left: 8em;
	z-index: 1;
}
#auth_app_container .logo {
	width: 210px;
	height: 50px;
	background: url('../img/kazoo-logo.svg');
	background-repeat: no-repeat;
	background-position: center;
}
#auth_app_container .intro h3 {
	color: $white;
	font-weight: lighter;
	max-width: 425px;
	line-height: 1.1em;
	margin: 20px 0 0 0;
}

#auth_app_container .social {
	position: absolute;
	bottom: 8%;
	left: 8em;
}

#auth_app_container .social .social-link {
	font-size: 1.5em;
}

#auth_app_container .social .social-link:not(:first-child) {
	margin-left: 18px;
}

#auth_app_container .social .social-link i {
	color: $manatee;
}

#auth_app_container .social .social-link:hover i {
	color: $primary-color;
}

/*
=====================================
	   FORM CONTAINERS/FORMS
=====================================
*/
#auth_app_container .sign-in {
	margin: 0 auto;
	width: 41%;
	float: right;
	height: 100vh;
	position: relative;
}
#auth_app_container .form-container {
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}
#auth_app_container form {
	padding: 30px;
	max-width: 360px;
	background: $white;
	margin: 0;
}
#auth_app_container form h3 {
	margin: 0 0 20px 0;
	font-weight: normal;
}
#auth_app_container form input {
	box-sizing: border-box;
	width: 100%;
	height: 32px;
	box-shadow: none;
}
#auth_app_container #form_login,
#auth_app_container #form_password_recovery {
	animation-duration: 0.1s;
}
#auth_app_container #form_password_recovery {
	display: none;
}
#auth_app_container .reset-notification p {
	/*display: none;*/
	color: #c0c0c9;
	margin-top: 0;
	margin-bottom: 18px;
	font-size: 15px;
	text-align: center;
}
#auth_app_container .btn-submit {
	width: 100%;
	border-radius: 2px;
	border: none;
	color: #ffffff;
	height: 50px;
	font-size: 20px;
	background: $primary-color;
	-webkit-transition: all 0.2s ease-in;
	-moz-transition: 	all 0.2s ease-in;
	-o-transition: 		all 0.2s ease-in;
	-ms-transition: 	all 0.2s ease-in;
	transition: 		all 0.2s ease-in;
}
#auth_app_container .btn-submit:hover,
#auth_app_container .btn-submit:focus {
	color: #ffffff;
	background: #57bcff;
	outline: none;
}
#auth_app_container .form-info {
	margin-bottom: 20px;
	color: #202029;
}
#auth_app_container .form-info.dark {
	color: #808089;
	text-align: center;
	margin: 16px 0 0;
}
#auth_app_container .form-info.dark .form-toggle {
	margin-top: 4px;
}
#auth_app_container .alt-actions {
	font-size: 13px;
	color: #808089;
	padding: 10px 0 16px;
}
#auth_app_container .form-toggle {
	text-align: center;
	display: block;
	font-size: 13px;
	color: $primary-color;
	margin: 0 auto;
	cursor: pointer;
}
#auth_app_container .form-toggle:hover,
#auth_app_container .form-toggle:focus {
	text-decoration: underline;
}
#auth_app_container .alt-actions .monster-checkbox {
	display: inline-block;
}
#auth_app_container .alt-actions .form-toggle {
	display: inline-block;
	float: right;
}
/*
=====================================
	FORM INPUTS WITH .error CLASS
=====================================
*/
#auth_app_container .input-wrap.error * {
	color: #ff3d24;
}
#auth_app_container .input-wrap.error > .placeholder-shift.fixed {
	color: #ff3d24;
}

@media screen and (max-width: 1024px) {
	#auth_app_container {
		overflow: auto;
	}
	#auth_app_container .intro {
		width: 100%;
		float: none;
		height: 200px;
		position: relative;
	}
	#auth_app_container .intro::after {
		display: block;
		content: '';
		background-color: #303039;
		position: absolute;
		transform: skew(0, -6deg);
		z-index: 0;
		top: 140px;
		left: 0;
		width: 100%;
		height: 240px;
	}
	#auth_app_container .intro .content {
		position: relative;
		top: 50%;
		left: 0;
		transform: translateY(-50%);
		text-align: center;
	}
	#auth_app_container .intro .content .logo {
		margin: 0 auto;
	}
	#auth_app_container .intro .content .welcome-message {
		margin-left: auto;
		margin-right: auto;
		padding: 0 10px;
	}
	#auth_app_container .intro .social {
		display: none;
	}
	#auth_app_container .sign-in {
		width: 100%;
		float: none;
		height: auto;
	}
	#auth_app_container .sign-in .form-container {
		top: 0;
		transform: none;
	}
	#auth_app_container .sign-in .form-container form {
		margin: 0 auto;
	}
}

#auth_app_container .powered-by-block {
	position: absolute;
	bottom: 0;
	width: 100%;
	text-align: center;
	margin: 20px 0px;
	font-size: 12px;
	color: #606069;
}
#auth_app_container .powered-by-block .tag-version {
	margin-left: 5px;
}
#auth_app_container .powered-by-block a,
#auth_app_container .powered-by-block a:hover,
#auth_app_container .powered-by-block a:active,
#auth_app_container .powered-by-block a:visited,
#auth_app_container .powered-by-block a:focus {
	color: #646469;
	text-decoration: none;
}
/* Trial Upgrade Popup */
#trial_upgrade_popup {
	padding: 15px;
	width: 284px;
}

#trial_upgrade_popup .actions {
	margin-top: 20px;
}

#trial_upgrade_popup .actions #upgrade {
	margin-left: 15px;
}


/* Walkthrough popups */
.trial-first-greeting-popup {
	padding: 15px;
	width: 450px;
}

.trial-first-greeting-popup .actions-wrapper {
	border-top: 1px solid #777;
	margin-top: 25px;
	padding-top: 15px;
	text-align: right;
}

/* Dialog Reset Password */
#password_update_dialog {
	width: 500px;
	padding: 15px;
}

#password_update_dialog .update-password {
	margin-left: 10px;
}

/* Duo dialog */
#duo_dialog {
	width: 500px;
	height: 350px;
	overflow: hidden;
}

#duo_dialog #duo_iframe {
	width: 100%;
	min-width: 304px;
	max-width: 620px;
	height: 350px;
	border: none;
}

